# embedded_intent_recognizer

./: CMakeLists.txt
etc/: configuration.json  invalid_configuration.json
include/: config_parser.h  embedded_intent_recognizer.h
source/: config_parser.cpp  embedded_intent_recognizer.cpp  main.cpp
tests/: CMakeLists.txt  config_parser_tests.cpp  embedded_intent_recognizer_tests.cpp
